@@ -4,27 +4,27 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.openaev.IntegrationTest;
+import io.openaev.context.TenantContext;
 import io.openaev.database.model.Agent;
 import io.openaev.database.model.Asset;
-import io.openaev.database.model.BaseInjectExpectation;
 import io.openaev.database.model.Inject;
-import io.openaev.database.model.InjectExpectationResult;
-import io.openaev.database.model.InjectExpectationTrace;
 import io.openaev.database.model.SecurityPlatform;
 import io.openaev.database.model.SecurityPlatform.SECURITY_PLATFORM_TYPE;
 import io.openaev.database.model.Step;
 import io.openaev.database.model.StepStatus;
-import io.openaev.database.model.TechnicalInjectExpectation;
 import io.openaev.database.model.Tenant;
 import io.openaev.database.model.WorkflowStatus;
 import io.openaev.database.model.attackpath.AttackPathExecution;
+import io.openaev.database.model.attackpath.AttackPathExecutionCollector;
 import io.openaev.database.repository.AgentRepository;
 import io.openaev.database.repository.AssetRepository;
-import io.openaev.database.repository.InjectExpectationRepository;
-import io.openaev.database.repository.InjectExpectationTraceRepository;
 import io.openaev.database.repository.InjectRepository;
 import io.openaev.database.repository.SecurityPlatformRepository;
+import io.openaev.database.repository.attackpath.AttackPathExecutionCollectorRepository;
 import io.openaev.database.repository.attackpath.AttackPathExecutionRepository;
 import io.openaev.ee.EnterpriseEditionService;
 import io.openaev.service.attackpath.AttackPathGraphService;
@@ -33,7 +33,6 @@ import io.openaev.service.attackpath.dto.AttackPathSecurityPlatformDTO;
 import io.openaev.utils.fixtures.AgentFixture;
 import io.openaev.utils.fixtures.AssetFixture;
 import io.openaev.utils.fixtures.ExerciseFixture;
-import io.openaev.utils.fixtures.InjectExpectationFixture;
 import io.openaev.utils.fixtures.InjectFixture;
 import io.openaev.utils.fixtures.StepFixture;
 import io.openaev.utils.fixtures.WorkflowFixture;
@@ -43,8 +42,6 @@ import io.openaev.utils.fixtures.composers.WorkflowComposer;
 import io.openaev.utils.fixtures.tenants.TenantFixture;
 import io.openaev.utils.mockUser.WithMockUser;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -63,6 +60,7 @@ import org.springframework.transaction.annotation.Transactional;
 class AttackPathSecurityPlatformsTest extends IntegrationTest {
 
   private static final String SIM = "SIM-SP";
+  private static final ObjectMapper JSON_MAPPER = new ObjectMapper();
 
   @Autowired private AttackPathGraphService graphService;
   @Autowired private AttackPathExecutionRepository executionRepository;
@@ -70,8 +68,7 @@ class AttackPathSecurityPlatformsTest extends IntegrationTest {
   @Autowired private AgentRepository agentRepository;
   @Autowired private SecurityPlatformRepository securityPlatformRepository;
   @Autowired private InjectRepository injectRepository;
-  @Autowired private InjectExpectationRepository injectExpectationRepository;
-  @Autowired private InjectExpectationTraceRepository injectExpectationTraceRepository;
+  @Autowired private AttackPathExecutionCollectorRepository executionCollectorRepository;
   @Autowired private WorkflowComposer workflowComposer;
   @Autowired private ExerciseComposer exerciseComposer;
   @Autowired private StepComposer stepComposer;
@@ -98,32 +95,6 @@ class AttackPathSecurityPlatformsTest extends IntegrationTest {
     siem = securityPlatformRepository.save(siem);
   }
 
-  /** Persists an expectation, SUCCESS, with a result from {@code sp}. */
-  private BaseInjectExpectation persistExpectation(
-      TechnicalInjectExpectation base, SecurityPlatform sp) {
-    return persistExpectation(base, sp, base.getExpectedScore());
-  }
-
-  /** Persists an expectation with an explicit {@code score}, with a result from {@code sp}. */
-  private BaseInjectExpectation persistExpectation(
-      TechnicalInjectExpectation base, SecurityPlatform sp, Double score) {
-    if (base.getAgent() == null) {
-      base.setAsset(asset); // asset-scoped unless the fixture already carries an agent
-    }
-    base.setScore(score);
-    base.setResults(
-        new ArrayList<>(
-            List.of(
-                InjectExpectationResult.builder()
-                    .sourceId(sp.getId())
-                    .sourceType(sp.getSecurityPlatformType().name())
-                    .sourceName(sp.getName())
-                    .date(Instant.parse("2026-06-18T08:00:00Z").toString())
-                    .score(score)
-                    .build())));
-    return injectExpectationRepository.save(base);
-  }
-
   private String seedExecution(String injectId, String agentId) {
     Step step = StepFixture.getDefaultStepExecution(StepStatus.READY);
     step.setData("{\"inject_id\": \"" + injectId + "\"}");
@@ -146,52 +117,91 @@ class AttackPathSecurityPlatformsTest extends IntegrationTest {
     return executionRepository.save(e).getId();
   }
 
+  private void saveCollectorRow(
+      String executionId, String expectationType, String status, String alertsJson, Double score) {
+    String resolvedSourceType = siem.getSecurityPlatformType().name();
+    AttackPathExecutionCollector row = new AttackPathExecutionCollector();
+    row.setId(executionId + "-" + expectationType + "-" + resolvedSourceType);
+    row.setTenant(tenant);
+    row.setSimulationId(SIM);
+    row.setExecutionId(executionId);
+    row.setExpectationType(expectationType);
+    row.setSourceId(siem.getId());
+    row.setSourceType(resolvedSourceType);
+    row.setSourceName(siem.getName());
+    row.setSourceAssetId(siem.getId());
+    row.setResultStatusLabel(status);
+    row.setDetectionTime(Instant.parse("2026-06-18T08:00:00Z").toString());
+    row.setAlerts(toJsonNode(alertsJson));
+    row.setResultScore(score);
+    row.setResultDate(Instant.parse("2026-06-18T08:00:00Z").toString());
+    executionCollectorRepository.save(row);
+  }
+
+  private JsonNode toJsonNode(String rawJson) {
+    try {
+      return JSON_MAPPER.readTree(rawJson);
+    } catch (JsonProcessingException e) {
+      throw new IllegalStateException("Invalid test alerts JSON: " + rawJson, e);
+    }
+  }
+
+  private AttackPathExecutionDetailDTO executionDetailForCurrentTenant(String executionId) {
+    TenantContext.setCurrentTenant(tenant.getId());
+    try {
+      return graphService.executionDetail(SIM, executionId);
+    } finally {
+      TenantContext.clearCurrentTenant();
+    }
+  }
+
   @Test
   @DisplayName("an asset-scoped detection expectation surfaces its platform and alerts")
   void assetExecution_listsDetectionPlatform_withAlerts() {
+    // Arrange
     Inject toPersist = InjectFixture.getDefaultInject();
-    toPersist.setAssets(new ArrayList<>(List.of(asset)));
     Inject inject = injectRepository.save(toPersist);
-
-    BaseInjectExpectation detection =
-        persistExpectation(
-            InjectExpectationFixture.createDetectionInjectExpectation(inject, null), siem);
-    // two alerts on the detection expectation for this platform
-    saveTrace(detection, siem, "Alert A", "http://siem/a");
-    saveTrace(detection, siem, "Alert B", "http://siem/b");
-
     String executionId = seedExecution(inject.getId(), null);
+    saveCollectorRow(
+        executionId,
+        "DETECTION",
+        "Detected",
+        "[{\"id\":\"a\",\"title\":\"Alert A\",\"date\":\"2026-06-18T08:00:00Z\",\"link\":\"http://siem/a\"},{\"id\":\"b\",\"title\":\"Alert B\",\"date\":\"2026-06-18T08:00:01Z\",\"link\":\"http://siem/b\"}]",
+        1.0);
     entityManager.flush();
 
-    AttackPathExecutionDetailDTO d = graphService.executionDetail(SIM, executionId);
+    // Act
+    AttackPathExecutionDetailDTO d = executionDetailForCurrentTenant(executionId);
 
+    // Assert
     assertThat(d).isNotNull();
     assertThat(d.securityPlatforms()).hasSize(1);
-    AttackPathSecurityPlatformDTO p = d.securityPlatforms().get(0);
-    assertThat(p.bucket()).isEqualTo("detection");
+    AttackPathSecurityPlatformDTO p = d.securityPlatforms().getFirst();
+    assertThat(p.bucket()).isEqualTo("DETECTION");
     assertThat(p.platformType()).isEqualTo("SIEM");
     assertThat(p.platformName()).isEqualTo("Splunk");
     assertThat(p.status()).isEqualTo("SUCCESS");
     assertThat(p.alerts())
-        .extracting(a -> a.title())
+        .extracting(io.openaev.service.attackpath.dto.AttackPathAlertDTO::title)
         .containsExactlyInAnyOrder("Alert A", "Alert B");
   }
 
   @Test
   @DisplayName("a platform that prevented is also surfaced as having detected")
   void preventedPlatform_alsoAppearsAsDetected() {
+    // Arrange
     Inject inject = injectRepository.save(InjectFixture.getDefaultInject());
-    persistExpectation(
-        InjectExpectationFixture.createPreventionInjectExpectation(inject, null), siem);
-
     String executionId = seedExecution(inject.getId(), null);
+    saveCollectorRow(executionId, "PREVENTION", "Prevented", "[]", 1.0);
     entityManager.flush();
 
-    AttackPathExecutionDetailDTO d = graphService.executionDetail(SIM, executionId);
+    // Act
+    AttackPathExecutionDetailDTO d = executionDetailForCurrentTenant(executionId);
 
+    // Assert
     assertThat(d.securityPlatforms())
         .extracting(AttackPathSecurityPlatformDTO::bucket)
-        .containsExactlyInAnyOrder("prevention", "detection");
+        .containsExactlyInAnyOrder("PREVENTION", "DETECTION");
     assertThat(d.securityPlatforms())
         .allSatisfy(
             p -> {
@@ -203,40 +213,40 @@ class AttackPathSecurityPlatformsTest extends IntegrationTest {
   @Test
   @DisplayName("an agent-scoped execution resolves its platforms by agent")
   void agentExecution_resolvesByAgent() {
+    // Arrange
     Inject inject = injectRepository.save(InjectFixture.getDefaultInject());
     Agent agent = agentRepository.save(AgentFixture.createAgent(asset, "ext-agent"));
-    persistExpectation(
-        InjectExpectationFixture.createDetectionInjectExpectation(inject, agent), siem);
-
     String executionId = seedExecution(inject.getId(), agent.getId());
+    saveCollectorRow(executionId, "DETECTION", "Detected", "[]", 1.0);
     entityManager.flush();
 
-    AttackPathExecutionDetailDTO d = graphService.executionDetail(SIM, executionId);
+    // Act
+    AttackPathExecutionDetailDTO d = executionDetailForCurrentTenant(executionId);
 
+    // Assert
     assertThat(d.securityPlatforms()).hasSize(1);
-    assertThat(d.securityPlatforms().get(0).bucket()).isEqualTo("detection");
-    assertThat(d.securityPlatforms().get(0).platformName()).isEqualTo("Splunk");
+    assertThat(d.securityPlatforms().getFirst().bucket()).isEqualTo("DETECTION");
+    assertThat(d.securityPlatforms().getFirst().platformName()).isEqualTo("Splunk");
   }
 
   @Test
   @DisplayName(
       "prevented ⇒ detected overrides a contradictory 'not detected' for the same platform")
   void preventionSuccess_upgradesContradictoryDetectionToSuccess() {
+    // Arrange
     Inject inject = injectRepository.save(InjectFixture.getDefaultInject());
-    // same platform: prevention SUCCESS but detection FAILED (contradictory) -> detected must win
-    persistExpectation(
-        InjectExpectationFixture.createPreventionInjectExpectation(inject, null), siem);
-    persistExpectation(
-        InjectExpectationFixture.createDetectionInjectExpectation(inject, null), siem, 0.0);
-
     String executionId = seedExecution(inject.getId(), null);
+    saveCollectorRow(executionId, "PREVENTION", "Prevented", "[]", 1.0);
+    saveCollectorRow(executionId, "DETECTION", "Not Detected", "[]", 0.0);
     entityManager.flush();
 
-    AttackPathExecutionDetailDTO d = graphService.executionDetail(SIM, executionId);
+    // Act
+    AttackPathExecutionDetailDTO d = executionDetailForCurrentTenant(executionId);
 
+    // Assert
     AttackPathSecurityPlatformDTO detected =
         d.securityPlatforms().stream()
-            .filter(p -> p.bucket().equals("detection"))
+            .filter(p -> "DETECTION".equalsIgnoreCase(p.bucket()))
             .findFirst()
             .orElseThrow();
     assertThat(detected.status()).isEqualTo("SUCCESS");
@@ -245,23 +255,22 @@ class AttackPathSecurityPlatformsTest extends IntegrationTest {
   @Test
   @DisplayName("an inactive Enterprise licence yields no security platforms (no error)")
   void inactiveLicence_yieldsEmpty() {
+    // Arrange
     when(enterpriseEditionService.isLicenseActive(any())).thenReturn(false);
     Inject inject = injectRepository.save(InjectFixture.getDefaultInject());
-    persistExpectation(
-        InjectExpectationFixture.createDetectionInjectExpectation(inject, null), siem);
-
     String executionId = seedExecution(inject.getId(), null);
+    saveCollectorRow(executionId, "DETECTION", "Detected", "[]", 1.0);
     entityManager.flush();
 
-    assertThat(graphService.executionDetail(SIM, executionId).securityPlatforms()).isEmpty();
+    // Act + Assert
+    assertThat(executionDetailForCurrentTenant(executionId).securityPlatforms()).isEmpty();
   }
 
   @Test
   @DisplayName("a target with neither agent nor asset resolves to no platforms")
   void noScope_yieldsEmpty() {
+    // Arrange
     Inject inject = injectRepository.save(InjectFixture.getDefaultInject());
-    persistExpectation(
-        InjectExpectationFixture.createDetectionInjectExpectation(inject, null), siem);
 
     Step step = StepFixture.getDefaultStepExecution(StepStatus.READY);
     step.setData("{\"inject_id\": \"" + inject.getId() + "\"}");
@@ -281,17 +290,7 @@ class AttackPathSecurityPlatformsTest extends IntegrationTest {
     String executionId = executionRepository.save(e).getId();
     entityManager.flush();
 
-    assertThat(graphService.executionDetail(SIM, executionId).securityPlatforms()).isEmpty();
-  }
-
-  private void saveTrace(
-      BaseInjectExpectation expectation, SecurityPlatform sp, String name, String link) {
-    InjectExpectationTrace t = new InjectExpectationTrace();
-    t.setInjectExpectation(expectation);
-    t.setSecurityPlatform(sp);
-    t.setAlertName(name);
-    t.setAlertLink(link);
-    t.setAlertDate(Instant.parse("2026-06-18T08:00:00Z"));
-    injectExpectationTraceRepository.save(t);
+    // Act + Assert
+    assertThat(executionDetailForCurrentTenant(executionId).securityPlatforms()).isEmpty();
   }
 }
